--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
   --border-color: #cce7d0;
 }
 
-button.normal{
+button.normal {
   font-size: 1rem;
   font-weight: 600;
   padding: 1rem 2rem;
@@ -72,49 +72,49 @@ button.normal{
 
 /* header styles */
 
-#header{
+#header {
   width: 100%;
-  padding: 1rem 3.5rem;
+  padding: 0.7rem 3.5rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #E3E6F3;
+  background-color: #e3e6f3;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.06);
   position: fixed;
   z-index: 999;
 }
 
-#header .logo{
+#header .logo {
   margin-left: 1.5rem;
 }
 
-#navbar{
+#navbar {
   display: flex;
   align-items: center;
   justify-content: space-between;
   list-style: none;
 }
 
-#navbar li{
+#navbar li {
   position: relative;
 }
 
-#navbar li a{ 
+#navbar li a {
   margin: 0rem 1.5rem;
   text-decoration: none;
   font-size: 1.2rem;
   font-weight: 600;
-  color: #1A1A1A;
+  color: #1a1a1a;
   transition: all 0.3s ease-in-out;
 }
 
 #navbar li a:hover,
-#navbar li a.active{
+#navbar li a.active {
   color: var(--main-color);
 }
 
 #navbar li a.active::before,
-#navbar li a:hover::before{
+#navbar li a:hover::before {
   position: absolute;
   content: "";
   width: 30%;
@@ -123,9 +123,55 @@ button.normal{
   background-color: var(--main-color);
 }
 
+#mobile {
+  display: none;
+}
+
+#mobile a {
+  text-decoration: none;
+  color: #1a1a1a;
+}
+
+#menubar {
+  position: absolute;
+  padding: 100px 50px;
+  box-sizing: border-box;
+  width: 40%;
+  height: 100vh;
+  top: 0;
+  right: -40%;
+  /* right: 0; */
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+#menubar a {
+  text-decoration: none;
+  color: #1a1a1a;
+  font-size: 30px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
+#menubar a:hover,
+#menubar a.active {
+  color: var(--main-color);
+}
+
+#menubar i {
+  position: absolute;
+  top: 3%;
+  right: 10%;
+  font-size: 30px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
 /* hero section */
 
-#hero{
+#hero {
   background-image: url(./img/hero4.png);
   background-position: top 5% right 0%;
   background-size: cover;
@@ -140,15 +186,15 @@ button.normal{
   justify-content: center;
 }
 
-#hero h4{
+#hero h4 {
   padding-bottom: 1rem;
 }
 
-#hero h1{
+#hero h1 {
   color: var(--main-color);
 }
 
-#hero button{
+#hero button {
   background-image: url(./img/button.png);
   background-color: transparent;
   background-repeat: no-repeat;
@@ -162,14 +208,14 @@ button.normal{
 
 /* features section */
 
-#features{
+#features {
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
 }
 
-#features .fe-box{
+#features .fe-box {
   width: 180px;
   text-align: center;
   padding: 25px 15px;
@@ -180,16 +226,16 @@ button.normal{
   box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.09);
 }
 
-#features .fe-box:hover{
+#features .fe-box:hover {
   box-shadow: 10px 10px 50px rgba(70, 60, 220, 0.2);
 }
 
-#features .fe-box img{
+#features .fe-box img {
   width: 100%;
   margin-bottom: 10px;
 }
 
-#features .fe-box h6{
+#features .fe-box h6 {
   display: inline-block;
   padding: 9px 8px 6px 8px;
   line-height: 1;
@@ -198,33 +244,33 @@ button.normal{
   background-color: #fddde4;
 }
 
-#features .fe-box:nth-child(2) h6{
+#features .fe-box:nth-child(2) h6 {
   background-color: #cdebbc;
 }
 
-#features .fe-box:nth-child(3) h6{
+#features .fe-box:nth-child(3) h6 {
   background-color: #cdd4f8;
 }
 
-#features .fe-box:nth-child(4) h6{
+#features .fe-box:nth-child(4) h6 {
   background-color: #f6dbf6;
 }
 
-#features .fe-box:nth-child(5) h6{
+#features .fe-box:nth-child(5) h6 {
   background-color: #fff2e5;
 }
 
-#features .fe-box:nth-child(6) h6{
+#features .fe-box:nth-child(6) h6 {
   background-color: #d1ebf2;
 }
 
 /* featured product section */
 
-#product1{
+#product1 {
   text-align: center;
 }
 
-#product1 .product{
+#product1 .product {
   width: 23%;
   min-width: 250px;
   padding: 10px 12px;
@@ -237,45 +283,45 @@ button.normal{
   position: relative;
 }
 
-#product1 .product:hover{
+#product1 .product:hover {
   box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.2);
 }
 
-#product1 .product img{
+#product1 .product img {
   width: 100%;
   border-radius: 20px;
 }
 
-#product1 .product .detail{
+#product1 .product .detail {
   text-align: start;
   padding: 10px 0px;
 }
 
-#product1 .product .detail span{
+#product1 .product .detail span {
   font-size: 12px;
   color: #606063;
 }
 
-#product1 .product .detail h5{
+#product1 .product .detail h5 {
   color: #1a1a1a;
   font-size: 14px;
   padding-top: 7px;
 }
 
-#product1 .product .detail .star{
+#product1 .product .detail .star {
   margin-top: 7px;
   font-size: 12px;
   color: rgb(243, 181, 25);
 }
 
-#product1 .product .detail h4{
+#product1 .product .detail h4 {
   font-size: 15px;
   font-weight: 700;
   padding-top: 7px;
   color: var(--main-color);
 }
 
-#product1 .product .cart{
+#product1 .product .cart {
   width: 40px;
   height: 40px;
   line-height: 40px;
@@ -288,7 +334,7 @@ button.normal{
   bottom: 15px;
 }
 
-.product-container{
+.product-container {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -297,41 +343,41 @@ button.normal{
 
 /* banner section */
 
-#banner{
+#banner {
   text-align: center;
   background-image: url(./img/banner/b2.jpg);
   background-position: center;
-  background-size: cover;  
+  background-size: cover;
 }
 
-#banner h4{
+#banner h4 {
   color: white;
   font-size: 2rem;
 }
 
-#banner h2{
+#banner h2 {
   margin: 2rem 0rem;
   color: white;
 }
 
-#banner h2 span{
+#banner h2 span {
   color: crimson;
 }
 
-#banner button:hover{
+#banner button:hover {
   color: white;
-  background-color: var(--main-color);  
+  background-color: var(--main-color);
 }
 
 /* sm-banner section */
 
-#sm-banner{
+#sm-banner {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-#sm-banner .banner-box{
+#sm-banner .banner-box {
   display: flex;
   flex-direction: column;
   align-items: start;
@@ -341,51 +387,49 @@ button.normal{
   min-width: 580px;
   height: 50vh;
   background-position: center;
-  background-size: cover;  
+  background-size: cover;
   padding: 2rem;
 }
 
-#sm-banner .banner-box-2{
+#sm-banner .banner-box-2 {
   background-image: url(./img/banner/b10.jpg);
 }
 
-#sm-banner .banner-box h2{
+#sm-banner .banner-box h2 {
   color: white;
   font-size: 2.3rem;
   margin-bottom: 5px;
 }
 
-
-#sm-banner .banner-box h4{
+#sm-banner .banner-box h4 {
   color: white;
   font-size: larger;
   font-weight: 400;
 }
 
-#sm-banner .banner-box button{
-  padding: .8rem 1.2rem;
+#sm-banner .banner-box button {
+  padding: 0.8rem 1.2rem;
   color: white;
   background-color: transparent;
   border: 1px solid white;
   margin-top: 1rem;
   cursor: pointer;
   transition: 0.3s ease-in-out;
-
 }
 
-#sm-banner .banner-box:hover button{
+#sm-banner .banner-box:hover button {
   background-color: var(--main-color);
   border-color: var(--main-color);
 }
 
-#banner3{
+#banner3 {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0 80px;
 }
 
-#banner3 .banner-box{
+#banner3 .banner-box {
   display: flex;
   flex-direction: column;
   align-items: start;
@@ -395,27 +439,26 @@ button.normal{
   min-width: 32%;
   height: 32vh;
   background-position: center;
-  background-size: cover;  
+  background-size: cover;
   padding: 1.5rem;
   /* margin-bottom: 20px; */
 }
 
-#banner3 .banner-box2{
+#banner3 .banner-box2 {
   background-image: url(./img/banner/b4.jpg);
 }
 
-#banner3 .banner-box3{
+#banner3 .banner-box3 {
   background-image: url(./img/banner/b18.jpg);
 }
 
-
-#banner3 h2{
+#banner3 h2 {
   color: white;
   font-weight: 900;
   font-size: 1.2rem;
 }
 
-#banner3 h3{
+#banner3 h3 {
   color: #ec544e;
   font-weight: 800;
   font-size: 1rem;
@@ -423,7 +466,7 @@ button.normal{
 
 /* Newsletter Section */
 
-#newsletter{
+#newsletter {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -434,28 +477,28 @@ button.normal{
   background-color: #041e42;
 }
 
-#newsletter h4{
+#newsletter h4 {
   font-size: 22px;
   font-weight: 700;
   color: #fff;
 }
 
-#newsletter p{
+#newsletter p {
   font-size: 14px;
   font-weight: 600;
   color: #818ea0;
 }
 
-#newsletter p span{
+#newsletter p span {
   color: #ffbd27;
 }
 
-#newsletter .form{
+#newsletter .form {
   display: flex;
   width: 40%;
 }
 
-#newsletter input{
+#newsletter input {
   height: 3.125rem;
   padding: 0 1.25rem;
   font-size: 14px;
@@ -467,7 +510,7 @@ button.normal{
   outline: none;
 }
 
-#newsletter button{
+#newsletter button {
   color: white;
   white-space: nowrap;
   background-color: #11b0a5;
@@ -477,66 +520,200 @@ button.normal{
 
 /* footer section */
 
-footer{
+footer {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
-footer .col{
+footer .col {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   /* margin-bottom: 20px; */
 }
 
-footer .logo{
+footer .logo {
   margin-bottom: 30px;
 }
 
-footer h4{
+footer h4 {
   font-size: 14px;
   padding-bottom: 20px;
 }
 
-footer p{
+footer p {
   font-size: 13px;
   margin-bottom: 10px;
 }
 
-footer a{
+footer a {
   font-size: 13px;
   text-decoration: none;
   color: #222;
   margin-bottom: 16px;
 }
 
-footer .follow{
+footer .follow {
   margin-top: 20px;
 }
 
-footer .follow i{
+footer .follow i {
   color: #465b52;
   padding-right: 4px;
   cursor: pointer;
 }
 
 footer .follow i:hover,
-footer a:hover{
+footer a:hover {
   color: #088178;
 }
 
-footer .install .row img{
+footer .install .row img {
   border: 1px solid #088178;
   border-radius: 6px;
 }
 
-footer .install img{
+footer .install img {
   margin: 12px 0px;
 }
 
-.copyright{
+.copyright {
+  background-color: #041e42;
   width: 100%;
   text-align: center;
-  margin-top: 0;
+}
+
+.copyright p {
+  margin: 0;
+  padding: 5px 0px;
+}
+
+.copyright p span {
+  color: #11b0a5;
+}
+
+/* Media Queries */
+
+@media (max-width: 820px) {
+  body {
+    overflow-x: hidden;
+  }
+
+  .section-p1 {
+    padding: 20px;
+  }
+
+  #navbar {
+    display: none;
+  }
+
+  #mobile {
+    display: block;
+  }
+
+  #mobile i {
+    font-size: 25px;
+    margin-left: 20px;
+  }
+
+  #hero {
+    background-position: top 30% right 30%;
+    padding: 0 3rem;
+  }
+
+  #features {
+    justify-content: center;
+    gap: 1rem;
+  }
+
+  .product-container {
+    justify-content: center;
+  }
+
+  #product1 .product {
+    margin: 15px;
+  }
+
+  #banner h2 {
+    margin: 1rem 0rem;
+  }
+
+  h2 {
+    font-size: 30px;
+    line-height: 40px;
+    color: #222;
+  }
+
+  #sm-banner {
+    display: block;
+    padding: 0;
+  }
+
+  #sm-banner .banner-box {
+    margin: 0 auto;
+    width: 90%;
+    height: 30vh;
+    margin-bottom: 2rem;
+  }
+
+  #banner3 {
+    display: block;
+    align-items: center;
+    justify-content: space-between;
+    width: 90%;
+    padding: 0;
+    margin: 0 auto;
+  }
+
+  #banner3 .banner-box {
+    height: 25vh;
+    margin-bottom: 20px;
+  }
+
+  #newsletter {
+    display: block;
+  }
+
+  #newsletter .form {
+    width: 70%;
+  }
+}
+
+@media (max-width: 460px) {
+  body {
+    overflow-x: hidden;
+  }
+
+  #header {
+    width: 100vw;
+    padding: 0.5rem 1rem 0.5rem 0rem;
+  }
+
+  #menubar {
+    width: 60%;
+    right: -60%;
+  }
+
+  #hero {
+    background-position: 65%;
+    padding: 0 1.5rem;
+  }
+
+  h1 {
+    font-size: 30px;
+    line-height: 64px;
+  }
+
+  #product1 .product {
+    width: 80%;
+  }
+
+  #sm-banner .banner-box {
+    min-width: 0px;
+  }
+
+  #newsletter .form {
+    width: 100%;
+  }
 }
