--- a/style.css
+++ b/style.css
@@ -389,6 +389,11 @@ button.normal {
   background-position: center;
   background-size: cover;
   padding: 2rem;
+  transition: background-size 0.5s ease;
+}
+
+#sm-banner .banner-box:hover{
+  background-size: 120%;
 }
 
 #sm-banner .banner-box-2 {
@@ -592,6 +597,28 @@ footer .install img {
 .copyright p span {
   color: #11b0a5;
 }
+
+/* shop page */
+
+#page-header{
+  background-image: url("img/banner/b1.jpg");
+  background-size: cover;
+  width: 100%;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  padding-top: 26px;
+}
+
+#page-header h2,
+#page-header p {
+  color: white;
+}
+
+
 
 /* Media Queries */
 
